Kubernetes/products-node-sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-node-port-sv
spec:
  type: NodePort
  selector:
      app: productservice
  ports:
    - name: productservice
      protocol: TCP
      port: 80
      targetPort: 80
