Kubernetes/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: lord.com
      http:
        paths:
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: products-clusterip-srv
                port:
                  number: 80
          - path: /api/u/products
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
